--- a/css/domain-tabs.css
+++ b/css/domain-tabs.css
@@ -10,7 +10,7 @@
 /**
  * Tabs Container
  */
-#features{
+#domains{
 	display: block;
 	align-items: center;
 	justify-content: center;
@@ -18,6 +18,7 @@
 .tabs-container {
 	padding: 2.5rem;
 	width: 100%;
+	
 }
 
 /**
@@ -27,6 +28,7 @@
 	display: flex;
 	align-items: center;
 	justify-content: center;
+
 }
 
 /**
@@ -34,6 +36,7 @@
  */
 .tab-body{
 	min-height: 640px;
+	border-radius: 0px 15px 15px;
 }
 .tab-icons img{
 	width: 30px;
@@ -57,7 +60,7 @@
   padding: 10px 25px 10px 25px;
   text-transform: uppercase;
   border: 2px solid;
-  background-color: #33a2be;
+  background-color: #0b8e89;
   transition: all .2s;
   border-radius: 40px;
   font-weight: 600;
@@ -66,13 +69,14 @@
   color: #fff;
 }
 .tab-body .buttons a:hover{
-	background-color: #0b8e89;
+	background-color: #33a2be;
   	color: #fff;
 }
 
 .tab-body h2{
 	margin-left: 10px;
 	margin-bottom: 10px;
+	color: #33a2be;
 }
 .tab-body p{
 	margin-left: 10px;
@@ -95,6 +99,7 @@
 }
 .tabs {
 	display: flex;
+	
 }
 
 .tabs > ul {
@@ -102,6 +107,7 @@
 	margin: 0;
 	padding: 0;
 	width: 15%;
+	
 }
 
 .tabs > ul li {
@@ -109,7 +115,8 @@
 }
 
 .tabs > ul li:not(:last-child) {
-	border-bottom: 1px solid #3f3f3f;
+	border-bottom: 2px solid #fff;
+	
 }
 
 .tabs > ul li a,
@@ -117,11 +124,18 @@
 	display: flex;
 	border-bottom: none;
 	text-decoration: none;
-	background-color: rgb(131, 128, 128);
+	background-color:#0b8e89;
 	color: #fff;
 	padding: 1rem 1.5rem;
 	transition: all 0.2s ease-in-out;
 	word-wrap: break-word;
+	
+}
+.tabs .l4{
+	border-radius: 0px 0px 0px 15px;
+}
+.tabs .l1{
+	border-radius: 15px 0px 0px 0px;
 }
 
 .tabs > ul li a:hover,
@@ -132,12 +146,12 @@
 }
 
 .tabs > ul li a.active {
-	background-color: #fff;
-	color: #0067b8;
+	background-color: #33a2be;
+	color: #fff;
 }
 
 .tabs > ul li a:hover:not(.active) {
-	color: #0067b8;
+	background-color: #33a2be;
 }
 
 .tabs > ul li a > span {
@@ -158,7 +172,8 @@
 	padding: 1rem;
 	display: none;
 	word-wrap: break-word;
-	border-bottom: 6px solid #0067b8;
+	border-bottom: 6px solid #0b8e89;
+	box-shadow: 1px 2px 5px 0px rgba(0,0,0,0.3);
 }
 
 .tabs section > * {
@@ -256,6 +271,26 @@
 	transform: translateY(0);
 }
 
+.technology{
+	display: flex;
+	align-items: left;
+	justify-content: left;
+	margin-left: 3px;
+}
+.technology .tec-icons img{
+	margin-top: 50px;
+	margin-right: 50px;
+	/* display: inline-block; */
+	width: 100%;
+	max-width: 150px;	
+}
+@media (max-width: 460px) {
+	.technology .tec-icons img{
+		max-width: none;
+		width: 80%;	
+	}
+}
+
 @media (min-width: 576px) {
 	.tabs > ul {
 		width: 150px;
@@ -279,14 +314,26 @@
 		width: calc(100% - 150px);
 		padding: 2rem 2rem;
 	}
+	.tabs {
+		width: 100%;
+	}
 }
 @media (min-width: 768px) {
+	.tabs {
+		width: 100%;
+	}
 	.tabs-container {
 		padding: 4rem 4rem;
+	}
+	.technology .tec-icons img{
+		max-width: 150px;	
 	}
 }
 @media (min-width: 992px) {
 	.tabs {
-		width: 992px;
+		width: 100%;
+	}
+	.technology .tec-icons img{
+		max-width: 150px;	
 	}
 }
