--- a/css/milestone.css
+++ b/css/milestone.css
@@ -180,7 +180,7 @@ body{
     margin-bottom: 0
 }
 .main-timeline .poster img{
-    width: 100%;
+    width: 50%;
 }
 
 .main-timeline .timeline:nth-child(2n) .date-content {
@@ -259,5 +259,10 @@ body{
     }
     .main-timeline .title {
         margin-bottom: 10px
+    }
+}
+@media only screen and (max-width: 480px) {
+    .main-timeline .poster img{
+        width: 100%;
     }
 }
